@@ -7,6 +7,10 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
+
+import Model.Continent;
+import Model.CurrentState;
+import Model.Map;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -49,8 +53,8 @@ public class MapTest {
      */
     @Test
     public void getCountryByName() {
-        assertEquals(1, (int) d_map.fetchCountryByName("India").getD_countryID());
-        assertNotEquals(2, (int) d_map.fetchCountryByName("China").getD_countryID());
+        assertEquals(1, (int) d_map.getCountryByName("USA").getD_countryID());
+        assertNotEquals(2, (int) d_map.getCountryByName("UK").getD_countryID());
     }
 
     /**
@@ -58,8 +62,8 @@ public class MapTest {
      */
     @Test
     public void getContinentByName() {
-        assertEquals(15, (int) d_map.fetchContinentByName("Asia").getD_continentValue());
-        assertNotEquals(15, (int) d_map.fetchContinentByName("Africa").getD_continentValue());
+        assertEquals(15, (int) d_map.getContinentByName("Europe").getD_continentValue());
+        assertNotEquals(15, (int) d_map.getContinentByName("SouthAmerica").getD_continentValue());
     }
 
     /**
@@ -91,7 +95,7 @@ public class MapTest {
     public void addContinent() {
         d_map = new Map();
         d_map.addContinent("Europe", 35);
-        assertEquals("Europe", d_map.getD_mapContinents().get(0).getD_continentName());
+        assertEquals("Europe", d_map.getD_mapContinents().getFirst().getD_continentName());
     }
 
     /**
@@ -99,9 +103,9 @@ public class MapTest {
      */
     @Test
     public void removeContinent() {
-        assertEquals("Asia", d_map.getD_mapContinents().get(0).getD_continentName());
-        d_map.removeContinent("Asia");
-        assertEquals("Africa", d_map.getD_mapContinents().get(0).getD_continentName());
+        assertEquals("NorthAmerica", d_map.getD_mapContinents().getFirst().getD_continentName());
+        d_map.removeContinent("NorthAmerica");
+        assertEquals("Europe", d_map.getD_mapContinents().getFirst().getD_continentName());
     }
 
     /**
@@ -110,9 +114,9 @@ public class MapTest {
     @Test
     public void addCountry() {
         d_map = new Map();
-        d_map.addContinent("Asia", 15);
-        d_map.addCountry("Sri Lanka", "Asia");
-        assertEquals("Sri Lanka", d_map.getD_mapCountries().get(0).getD_countryName());
+        d_map.addContinent("NorthAmerica", 15);
+        d_map.addCountry("Cuba", "NorthAmerica");
+        assertEquals("Cuba", d_map.getD_mapCountries().getFirst().getD_countryName());
     }
 
     /**
@@ -123,11 +127,11 @@ public class MapTest {
         d_map.addNeighbour(1, 2);
         d_map.addNeighbour(1, 4);
 
-        List<Integer> l_neighbourCountryIdListIndia = d_map.fetchCountryByName("India").getD_neighbouringCountriesId();
-        List<Integer> l_neighbourCountryIdListMorocco = d_map.fetchCountryByName("Morocco").getD_neighbouringCountriesId();
+        List<Integer> l_neighbourCountryIdListUSA = d_map.getCountryByName("USA").getD_neighbouringCountriesId();
+        List<Integer> l_neighbourCountryIdListUK = d_map.getCountryByName("UK").getD_neighbouringCountriesId();
 
-        assertEquals("[2, 4]", l_neighbourCountryIdListIndia.toString());
-        assertEquals("[1, 4, 2]", l_neighbourCountryIdListMorocco.toString());
+        assertEquals("[2, 4, 6]", l_neighbourCountryIdListUSA.toString());
+        assertEquals("[2, 4]", l_neighbourCountryIdListUK.toString());
     }
 
     /**
@@ -138,11 +142,11 @@ public class MapTest {
         d_map.removeNeighbour(1, 2);
         d_map.removeNeighbour(1, 4);
 
-        List<Integer> l_neighbourCountryIdListIndia = d_map.fetchCountryByName("India").getD_neighbouringCountriesId();
-        List<Integer> l_neighbourCountryIdListNigeria = d_map.fetchCountryByName("Nigeria").getD_neighbouringCountriesId();
+        List<Integer> l_neighbourCountryIdListUSA = d_map.getCountryByName("USA").getD_neighbouringCountriesId();
+        List<Integer> l_neighbourCountryIdListNigeria = d_map.getCountryByName("UK").getD_neighbouringCountriesId();
 
-        assertEquals("[]", l_neighbourCountryIdListIndia.toString());
-        assertEquals("[2, 3]", l_neighbourCountryIdListNigeria.toString());
+        assertEquals("[6]", l_neighbourCountryIdListUSA.toString());
+        assertEquals("[2, 4]", l_neighbourCountryIdListNigeria.toString());
     }
 
     /**
@@ -150,9 +154,9 @@ public class MapTest {
      */
     @Test
     public void removeCountry() {
-        assertEquals("India", d_map.getD_mapCountries().get(0).getD_countryName());
-        d_map.removeCountry("India");
-        assertEquals("China", d_map.getD_mapCountries().get(0).getD_countryName());
+        assertEquals("USA", d_map.getD_mapCountries().getFirst().getD_countryName());
+        d_map.removeCountry("USA");
+        assertEquals("Canada", d_map.getD_mapCountries().getFirst().getD_countryName());
     }
 
     /**
